docs: Update links in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </a>
 
         <!-- Muud püsilingid -->
-        <a href="https://soundcloud.com/letmejuke" target="_blank" class="link-button">
+        <a href="https://soundcloud.com/user-389610087" target="_blank" class="link-button">
             SoundCloud
         </a>
         <a href="https://www.mixcloud.com/letmejuke/" target="_blank" class="link-button">
