--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
-[object Object]
+<!DOCTYPE html>
+<html lang="et">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Let Me Juke - IDA Radio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .container {
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+        .profile-image {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
+            border: 3px solid #ff00ff; /* Juke-style border */
+        }
+        h1 {
+            color: #ff00ff; /* Juke-style color */
+            margin-bottom: 30px;
+            font-size: 1.8em;
+        }
+        .link-button {
+            display: block;
+            width: 100%;
+            padding: 15px 20px;
+            margin-bottom: 15px;
+            background-color: #333;
+            color: #00ffff; /* Juke-style accent */
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 1.1em;
+            font-weight: bold;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            border: 1px solid #00ffff;
+        }
+        .link-button:hover {
+            background-color: #00ffff;
+            color: #1a1a1a;
+        }
+        .footer {
+            margin-top: 40px;
+            font-size: 0.8em;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="https://via.placeholder.com/120/ff00ff/000000?text=LMJ" alt="Let Me Juke Profile" class="profile-image">
+        <h1>Let Me Juke - IDA Radio</h1>
+        
+        <!-- Uusim saade - see link uuendatakse automaatselt -->
+        <a href="https://ida.radio/shows/let-me-juke-placeholder" target="_blank" class="link-button" id="latest-show-link">
+            🎧 Kuula uusimat saadet!
+        </a>
+
+        <!-- Muud püsilingid -->
+        <a href="https://soundcloud.com/user-389610087" target="_blank" class="link-button">
+            SoundCloud
+        </a>
+        <a href="https://www.mixcloud.com/letmejuke/" target="_blank" class="link-button">
+            Mixcloud
+        </a>
+        <a href="https://www.instagram.com/letmejuke/" target="_blank" class="link-button">
+            Instagram
+        </a>
+        <a href="https://www.facebook.com/letmejuke/" target="_blank" class="link-button">
+            Facebook
+        </a>
+    </div>
+    <footer class="footer">
+        Powered by Gemini AI & n8n
+    </footer>
+</body>
+</html>
